@@ -162,8 +162,8 @@ function (data, model, response = NULL, S = NULL, C = NULL, sigma = NULL, lambda
     output$plot", seqC, " <- renderPlot({
       i <- ", seqC, "
       xcplots[[i]] <<- plotxc(xc = data[, C[[i]]], xc.cond = rv$xc.cond[1L,
-        C[[i]]], name = colnames(data[, C[[i]], drop = FALSE]), select.colour =
-        select.colour, select.cex = select.cex)
+        C[[i]]], name = colnames(data[, C[[i]], drop = FALSE]), trim =
+        xcplotpar$trim, select.colour = select.colour, select.cex = select.cex)
     })"
     , sep = "", collapse = "\n"), '
 
