@@ -4,8 +4,9 @@
 \alias{plotxc}
 \title{Condition selector plot}
 \usage{
-plotxc(xc, xc.cond, name = NULL, select.colour = NULL, select.lwd = NULL,
-  cex.axis = NULL, cex.lab = NULL, tck = NULL, select.cex = 1, ...)
+plotxc(xc, xc.cond, name = NULL, trim = NULL, select.colour = NULL,
+  select.lwd = NULL, cex.axis = NULL, cex.lab = NULL, tck = NULL,
+  select.cex = 1, ...)
 }
 \arguments{
 \item{xc}{A numeric or factor vector, or a dataframe with two columns}
@@ -14,6 +15,9 @@ plotxc(xc, xc.cond, name = NULL, select.colour = NULL, select.lwd = NULL,
 space to highlight.}
 
 \item{name}{The variable name for \code{xc}}
+
+\item{trim}{Logical; if \code{TRUE}, long tails of continuous data are
+chopped off at the 5th and 95th percentiles.}
 
 \item{select.colour}{Colour to highlight \code{xc.cond}}
 
@@ -38,28 +42,39 @@ Data visualisations used to select sections for
   \code{\link{ceplot}}.
 }
 \examples{
-## histogram, highlighting the first case
+## Histogram, highlighting the first case.
+
 data(mtcars)
 obj <- plotxc(mtcars[, "mpg"], mtcars[1, "mpg"])
 obj$usr
 
-## barplot, highlighting 'cyl' = 6
+## Barplot, highlighting 'cyl' = 6.
+
 plotxc(as.factor(mtcars[, "cyl"]), 6, select.colour = "blue")
 
-## scatterplot, highlighting case 25
+## Scatterplot, highlighting case 25.
+
 plotxc(mtcars[, c("qsec", "wt")], mtcars[25, c("qsec", "wt")],
   select.colour = "blue", select.lwd = 1, lty = 3)
 
-## boxplot, where 'xc' contains one factor, and one numeric
+## Boxplot, where 'xc' contains one factor, and one numeric.
+
 mtcars$carb <- as.factor(mtcars$carb)
 plotxc(mtcars[, c("carb", "wt")], mtcars[25, c("carb", "wt")],
   select.colour = "red", select.lwd = 3)
 
-## spineplot, where 'xc' contains two factors
+## Spineplot, where 'xc' contains two factors.
+
 mtcars$gear <- as.factor(mtcars$gear)
 mtcars$cyl <- as.factor(mtcars$cyl)
 plotxc(mtcars[, c("cyl", "gear")], mtcars[25, c("cyl", "gear")],
   select.colour = "red")
+
+## Effect of 'trim'.
+
+x <- c(-200, runif(400), 200)
+plotxc(x, 0.5, trim = FALSE, select.colour = "red")
+plotxc(x, 0.5, trim = TRUE, select.colour = "red")
 
 }
 \seealso{
